--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "electron": "^12.0.9",
     "element-ui": "2.12.0",
     "file-saver": "^2.0.5",
     "js-cookie": "2.2.0",
